bug 72415: allocate more word buffer in case of failure of ComputeWordFragmentWidth() check in for shanjian@netscape.com r=waterson, sr=attinasi a=blizzard